--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,31 @@ body {
   background-color: black;
 }
 
+.region, .mode {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 17px;
+}
+
+.option {
+    text-align: center;
+    border: 1px solid #515151;
+    background-color: #00000094;
+    width: 116px;
+    margin-right: 18px;
+    padding: 7px 27px;
+    line-height: 15px;
+    cursor: pointer;
+}
+.option.selected {
+    border: 1px solid white;
+    background-color: black;
+}
+
+.option:hover {
+    border: 1px solid white;
+}
+
 
 .navigation {
     padding: 13px;
@@ -47,7 +72,7 @@ body {
 .intro {
     color: #d1d1d1;
     font-size: 16px;
-    margin-top: 91px;
+    margin-top: 68px;
 }
 
 .container {
@@ -102,6 +127,7 @@ body {
 
 .mmr {
   font-size:  48px;
+      margin: 30px;
 }
 
 
