--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,28 @@
   box-sizing: border-box;
 }
 
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #190044eb; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: black; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: white; 
+}
+
+
 body {
   font-family: 'ff', serif;
   width: 100%;
